--- a/style.css
+++ b/style.css
@@ -1,47 +1,44 @@
 * {
-     box-sizing: border-box;
-}
-body {
+     box-sizing: border-box; 
+   }
+   body {
+     display: flex;
+     min-height: 100vh;
+     flex-direction: row;
      margin: 0;
-     flex-direction: column;
-}
-#flexbox{
-     display: flex;
-     min-height: calc(100vh - 40vh);
-}
-#flexbox > article {
-     display: flex;
+   }
+   .outer-col-1 {
+     background: black;
+     color : white;
      flex: 1;
-     flex-direction: column;
-     background-color: green;
-}
-img.one {
-     height: 70%;
-     width: 70%;
-}
-#flexbox > aside {
+   }
+   .outer-col-2 {
      display: flex;
-     flex: 0 0 20vw;
-     background-color: green;
      flex-direction: column;
-}
-#flexbox > nav {
+     flex: 5;
+   }
+   .inner-row {
      display: flex;
-     order: -1;
-     justify-content: left;
-     flex-direction: column;
-     background-color: black;
-     flex: 0 20vh 20vw;
-}
-#footerbox > footer {
-     object-fit: cover;
-}
-header, footer, article, nav, aside {
-     padding: 1em;
-}
-
-header, footer {
+     flex-direction: row;
+   }
+   .inner-col {
+     flex: 4;
+   }
+   .inner-row article {
+     min-height: 60vh;
+   }
+   .one {
+     width: 100%;
+     height: 100%;
+   }
+   .inner-row aside {
      background: green;
-     height: 15vh;
-}
-
+     flex: 1;
+   }
+   header, footer {
+     background: green;
+     height: 10vh;
+   }
+   header, footer, article, nav, aside {
+     padding: 1em;
+   }
