things i need help with

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
      display: flex;
      min-height: 100vh;
      flex-direction: row;
+     background-color: black;
      margin: 0;
    }
    .outer-col-1 {
@@ -15,16 +16,20 @@
    .outer-col-2 {
      display: flex;
      flex-direction: column;
+     background-color: green;
      flex: 5;
    }
    .inner-row {
      display: flex;
+     background-color: green;
      flex-direction: row;
    }
    .inner-col {
+     background-color: green;
      flex: 4;
    }
    .inner-row article {
+     background-color: green;
      min-height: 60vh;
    }
    .one {
@@ -35,10 +40,14 @@
      background: green;
      flex: 1;
    }
-   header, footer {
+   header  {
      background: green;
      height: 10vh;
    }
+   footer {
+     background-color: black;
+   }
+
    header, footer, article, nav, aside {
      padding: 1em;
    }
